--- a/rewrite_misty.ipynb
+++ b/rewrite_misty.ipynb
@@ -6,16 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.sparse import issparse\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import scanpy as sc\n",
     "\n",
     "from liana.method.sp._spatial_pipe import spatial_neighbors\n",
-    "from liana.method.sp._misty import _get_neighbors\n",
     "\n",
-    "from scipy.sparse import csr_matrix\n",
     "from mudata import MuData\n",
     "from anndata import AnnData\n",
     "import os"
@@ -27,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from liana.method._pipe_utils import prep_check_adata"
+    "from liana.method._pipe_utils._pre import _choose_mtx_rep"
    ]
   },
   {
@@ -46,20 +42,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _make_view(adata, connecitivity=None, spatial_key=None, layer=None, use_raw=False, obs=None):\n",
+    "def _make_view(adata, obs=None, use_raw=False, layer=None, connecitivity=None, spatial_key=None, verbose=False):\n",
     "    \n",
-    "    # `prep_check_adata` for lr; as in basis for any other pipeline\n",
-    "    adata = prep_check_adata(adata, use_raw=use_raw, layer=layer, groupby=None, min_cells=None)\n",
+    "    X = _choose_mtx_rep(adata=adata, use_raw=use_raw, layer=layer, verbose=verbose)\n",
+    "    \n",
     "    if connecitivity is not None:\n",
-    "        conns = connecitivity\n",
-    "        obsp = {'spatial_connectivities': conns}\n",
-    "    elif spatial_key is not None:\n",
-    "        conns = adata.obsp[spatial_key]\n",
-    "        obsp = {'spatial_connectivities': conns}\n",
+    "        obsp = dict()\n",
+    "        obsp[f\"{spatial_key}_connectivities\"] = connecitivity\n",
     "    else:\n",
-    "        obsp=None\n",
+    "        obsp = None\n",
     "        \n",
-    "    return AnnData(X=adata.X, obs=obs, var=adata.var, obsp=obsp)"
+    "    obsm = dict()\n",
+    "    if spatial_key is not None:\n",
+    "        if spatial_key not in adata.obsm.keys():\n",
+    "            raise ValueError(f\"spatial_key {spatial_key} not found in adata.obsm.keys()\")\n",
+    "        obsm[spatial_key] = adata.obsm[spatial_key]\n",
+    "        \n",
+    "    return AnnData(X=X, obs=obs, var=pd.DataFrame(index=adata.var_names), obsp=obsp, obsm=obsm)"
    ]
   },
   {
@@ -93,12 +92,14 @@
    "outputs": [],
    "source": [
     "class MistyData(MuData):\n",
+    "    # TODO: change to SpatialData when Squidpy is updated\n",
     "\n",
-    "    def __init__(self, views, obs):\n",
-    "        MuData.__init__(self, views)\n",
+    "    def __init__(self, data, obs, spatial_key):\n",
+    "        super().__init__(data)\n",
     "        self.view_names = list(self.mod.keys())\n",
-    "        self._check_views()\n",
     "        self.obs = obs\n",
+    "        self.spatial_key = spatial_key\n",
+    "        self._check_views()\n",
     "    \n",
     "    def _check_views(self):\n",
     "        assert isinstance(self, MuData), \"views must be a MuData object\"\n",
@@ -107,12 +108,11 @@
     "        for view in self.view_names:\n",
     "            if view==\"intra\":\n",
     "                continue\n",
-    "            if \"spatial_connectivities\" not in self.mod[view].obsp.keys():\n",
-    "                raise ValueError(f\"view {view} must contain a spatial_connectivities key in .obsp\")\n",
+    "            if f\"{self.spatial_key}_connectivities\" not in self.mod[view].obsp.keys():\n",
+    "                raise ValueError(f\"view {view} does not contain `{self.spatial_key}_connectivities` key in .obsp\")\n",
     "    \n",
-    "    ## TODO assign targets & predictors to views\n",
     "    def _get_conn(self, view_name):\n",
-    "        return self.mod[view_name].obsp[\"spatial_connectivities\"]\n",
+    "        return self.mod[view_name].obsp[f\"{self.spatial_key}_connectivities\"]\n",
     "\n",
     " "
    ]
@@ -134,20 +134,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# xdata = adata"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ydata = None\n",
     "set_diag = True\n",
     "spatial_key = 'spatial'\n",
     "bandwidth = 10\n",
@@ -160,11 +150,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ydata = ydata if ydata else xdata"
+    "def genericMistyData(intra,\n",
+    "                     extra=None,\n",
+    "                     add_para=True,\n",
+    "                     spatial_key='spatial',\n",
+    "                     set_diag=True, \n",
+    "                     bandwidth = 10,\n",
+    "                     kernel = 'misty_rbf',\n",
+    "                     zoi = 0,\n",
+    "                     cutoff = 0.1,\n",
+    "                     add_juxta=True,\n",
+    "                     n_neighs = 6,\n",
+    "                     juxta_cutoff = np.inf,\n",
+    "                     extra_use_raw=False,\n",
+    "                     extra_layer=None,\n",
+    "                     intra_use_raw=False,\n",
+    "                     intra_layer=None,\n",
+    "                     verbose=False,\n",
+    "                     **kwargs,\n",
+    "                     ):\n",
+    "    \n",
+    "    # init views\n",
+    "    views = {}\n",
+    "    \n",
+    "    # NOTE the intra view is the one with obs\n",
+    "    intra = _make_view(adata=intra, obs=intra.obs, use_raw=intra_use_raw, layer=intra_layer, spatial_key=spatial_key, verbose=verbose)\n",
+    "    views['intra'] = intra\n",
+    "    \n",
+    "    if extra is None:\n",
+    "        extra = intra\n",
+    "    \n",
+    "    if add_para:\n",
+    "        weights = spatial_neighbors(adata=extra,\n",
+    "                                    spatial_key=spatial_key,\n",
+    "                                    bandwidth=bandwidth,\n",
+    "                                    kernel=kernel,\n",
+    "                                    set_diag=set_diag, \n",
+    "                                    inplace=False,\n",
+    "                                    cutoff=cutoff,\n",
+    "                                    zoi=zoi\n",
+    "                                    )\n",
+    "        views['para'] = _make_view(adata=extra, use_raw=extra_use_raw, layer=extra_layer, spatial_key=spatial_key, connecitivity=weights, verbose=verbose)\n",
+    "\n",
+    "    if add_juxta:\n",
+    "        sq = _check_if_squidpy()\n",
+    "        neighbors, dists = sq.gr.spatial_neighbors(adata=extra,\n",
+    "                                                   copy=True,\n",
+    "                                                   spatial_key=spatial_key,\n",
+    "                                                   set_diag=set_diag,\n",
+    "                                                   n_neighs=n_neighs,\n",
+    "                                                   **kwargs\n",
+    "                                                   )\n",
+    "        neighbors[dists > juxta_cutoff] = 0\n",
+    "\n",
+    "        views['juxta'] = _make_view(adata=extra, use_raw=extra_use_raw, layer=extra_layer, spatial_key=spatial_key, connecitivity=neighbors, verbose=verbose)\n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "    return MistyData(views, intra.obs, spatial_key)\n",
+    "\n"
    ]
   },
   {
@@ -176,146 +231,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def construct_views(xdata, \n",
-    "                    ydata=None,\n",
-    "                    add_para=True,\n",
-    "                    spatial_key='spatial',\n",
-    "                    set_diag=True, \n",
-    "                    bandwidth = 10,\n",
-    "                    kernel = 'misty_rbf',\n",
-    "                    zoi = 0,\n",
-    "                    cutoff = 0.1,\n",
-    "                    add_juxta=True,\n",
-    "                    n_neighs = 6,\n",
-    "                    juxta_cutoff = np.inf,\n",
-    "                    **kwargs\n",
-    "                    ):\n",
-    "    \n",
-    "    # init views\n",
-    "    views = {}\n",
-    "    ydata = ydata if ydata else xdata\n",
-    "    \n",
-    "    # NOTE the intra view is the one with obs\n",
-    "    views['intra'] = _make_view(adata=ydata, use_raw=False, layer=None)\n",
-    "    \n",
-    "    if add_para:\n",
-    "        weights = spatial_neighbors(adata=xdata,\n",
-    "                                    bandwidth=bandwidth,\n",
-    "                                    kernel=kernel,\n",
-    "                                    set_diag=set_diag, \n",
-    "                                    inplace=False,\n",
-    "                                    cutoff=cutoff,\n",
-    "                                    zoi=zoi\n",
-    "                                    )\n",
-    "        views['para'] = _make_view(xdata, use_raw=False, layer=None, connecitivity=weights)\n",
-    "\n",
-    "    if add_juxta:\n",
-    "        sq = _check_if_squidpy()\n",
-    "        neighbors, dists = sq.gr.spatial_neighbors(adata=xdata,\n",
-    "                                                   copy=True,\n",
-    "                                                   spatial_key=spatial_key,\n",
-    "                                                   set_diag=set_diag,\n",
-    "                                                   n_neighs=n_neighs,\n",
-    "                                                   **kwargs\n",
-    "                                                   )\n",
-    "        neighbors[dists > juxta_cutoff] = 0\n",
-    "\n",
-    "        views['juxta'] = _make_view(xdata, use_raw=False, layer=None, connecitivity=neighbors)\n",
-    "    \n",
-    "    return views, ydata.obs\n",
-    "\n"
+    "mdata = genericMistyData(adata, delaunay=True, coord_type=\"generic\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "views, obs = construct_views(adata, delaunay=True, coord_type=\"generic\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/mudata/_core/mudata.py:457: UserWarning: Cannot join columns with the same name because var_names are intersecting.\n"
-     ]
-    }
-   ],
-   "source": [
-    "mdata = MistyData(views, obs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre>MuData object with n_obs × n_vars = 4205 × 33\n",
-       "  obs:\t&#x27;cell_type&#x27;\n",
-       "  3 modalities\n",
-       "    intra:\t4205 x 11\n",
-       "    para:\t4205 x 11\n",
-       "      obsp:\t&#x27;spatial_connectivities&#x27;\n",
-       "    juxta:\t4205 x 11\n",
-       "      obsp:\t&#x27;spatial_connectivities&#x27;</pre>"
-      ],
-      "text/plain": [
-       "MuData object with n_obs × n_vars = 4205 × 33\n",
-       "  obs:\t'cell_type'\n",
-       "  3 modalities\n",
-       "    intra:\t4205 x 11\n",
-       "    para:\t4205 x 11\n",
-       "      obsp:\t'spatial_connectivities'\n",
-       "    juxta:\t4205 x 11\n",
-       "      obsp:\t'spatial_connectivities'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "mdata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['intra', 'para', 'juxta']"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mdata.view_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,30 +307,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['ECM',\n",
-       " 'ligA',\n",
-       " 'ligB',\n",
-       " 'ligC',\n",
-       " 'ligD',\n",
-       " 'prodA',\n",
-       " 'prodB',\n",
-       " 'prodC',\n",
-       " 'prodD',\n",
-       " 'protE',\n",
-       " 'protF']"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "targets"
    ]
@@ -409,14 +331,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_estimators = 20\n",
     "n_jobs = -1\n",
     "seed = 1337\n",
-    "bypass_intra = False\n",
+    "bypass_intra = True\n",
     "keep_same_predictor = False\n",
     "k_cv = 10\n",
     "alphas = [0.1, 1, 10]"
@@ -424,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
