--- a/synthetic_test.ipynb
+++ b/synthetic_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -123,10 +123,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8782930679754)>"
+       "<ggplot: (8761725980246)>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -153,10 +153,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8782930718606)>"
+       "<ggplot: (8761725470648)>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -183,10 +183,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8782930628605)>"
+       "<ggplot: (8761699321580)>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -238,10 +238,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8782887263314)>"
+       "<ggplot: (8761699325397)>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -413,13 +413,329 @@
        "[220 rows x 6 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "misty.uns['importances']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del misty.uns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "misty.uns = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "misty.uns['importances'].drop(columns=['intra_group', 'extra_group'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "      <th>intra_group</th>\n",
+       "      <th>env_group</th>\n",
+       "      <th>intra_R2</th>\n",
+       "      <th>multi_R2</th>\n",
+       "      <th>gain_R2</th>\n",
+       "      <th>intra</th>\n",
+       "      <th>para</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ECM</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.923776</td>\n",
+       "      <td>0.932255</td>\n",
+       "      <td>8.479020e-03</td>\n",
+       "      <td>0.809283</td>\n",
+       "      <td>0.190717</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ligA</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.989752</td>\n",
+       "      <td>0.989890</td>\n",
+       "      <td>1.387876e-04</td>\n",
+       "      <td>0.969908</td>\n",
+       "      <td>0.030092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ligB</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.938705</td>\n",
+       "      <td>0.946808</td>\n",
+       "      <td>8.103526e-03</td>\n",
+       "      <td>0.827781</td>\n",
+       "      <td>0.172219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ligC</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.792883</td>\n",
+       "      <td>0.861073</td>\n",
+       "      <td>6.818968e-02</td>\n",
+       "      <td>0.622022</td>\n",
+       "      <td>0.377978</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ligD</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.977320</td>\n",
+       "      <td>0.977836</td>\n",
+       "      <td>5.164163e-04</td>\n",
+       "      <td>0.946948</td>\n",
+       "      <td>0.053052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>protE</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.997760</td>\n",
+       "      <td>0.997757</td>\n",
+       "      <td>-2.465470e-06</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>protF</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.999113</td>\n",
+       "      <td>0.999114</td>\n",
+       "      <td>6.834885e-07</td>\n",
+       "      <td>0.994865</td>\n",
+       "      <td>0.005135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>prodA</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.992840</td>\n",
+       "      <td>0.992873</td>\n",
+       "      <td>3.348619e-05</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>prodB</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.984011</td>\n",
+       "      <td>0.984206</td>\n",
+       "      <td>1.952714e-04</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>prodC</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.960142</td>\n",
+       "      <td>0.960558</td>\n",
+       "      <td>4.162583e-04</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>prodD</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0.991856</td>\n",
+       "      <td>0.991872</td>\n",
+       "      <td>1.634354e-05</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   target intra_group env_group  intra_R2  multi_R2       gain_R2     intra   \n",
+       "0     ECM        None      None  0.923776  0.932255  8.479020e-03  0.809283  \\\n",
+       "1    ligA        None      None  0.989752  0.989890  1.387876e-04  0.969908   \n",
+       "2    ligB        None      None  0.938705  0.946808  8.103526e-03  0.827781   \n",
+       "3    ligC        None      None  0.792883  0.861073  6.818968e-02  0.622022   \n",
+       "4    ligD        None      None  0.977320  0.977836  5.164163e-04  0.946948   \n",
+       "5   protE        None      None  0.997760  0.997757 -2.465470e-06  1.000000   \n",
+       "6   protF        None      None  0.999113  0.999114  6.834885e-07  0.994865   \n",
+       "7   prodA        None      None  0.992840  0.992873  3.348619e-05  1.000000   \n",
+       "8   prodB        None      None  0.984011  0.984206  1.952714e-04  1.000000   \n",
+       "9   prodC        None      None  0.960142  0.960558  4.162583e-04  1.000000   \n",
+       "10  prodD        None      None  0.991856  0.991872  1.634354e-05  1.000000   \n",
+       "\n",
+       "        para  \n",
+       "0   0.190717  \n",
+       "1   0.030092  \n",
+       "2   0.172219  \n",
+       "3   0.377978  \n",
+       "4   0.053052  \n",
+       "5   0.000000  \n",
+       "6   0.005135  \n",
+       "7   0.000000  \n",
+       "8   0.000000  \n",
+       "9   0.000000  \n",
+       "10  0.000000  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "misty.uns['target_metrics']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "misty.uns['target_metrics'].drop(columns=['intra_group', 'env_group'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/mudata/_core/mudata.py:457: UserWarning: Cannot join columns with the same name because var_names are intersecting.\n"
+     ]
+    }
+   ],
+   "source": [
+    "misty.write_h5mu(\"misty.h5mu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mudata as mu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dbdimitrov/anaconda3/envs/liana-py/lib/python3.10/site-packages/mudata/_core/mudata.py:457: UserWarning: Cannot join columns with the same name because var_names are intersecting.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>MuData object with n_obs × n_vars = 4205 × 22\n",
+       "  obs:\t&#x27;cell_type&#x27;\n",
+       "  uns:\t&#x27;importances&#x27;, &#x27;target_metrics&#x27;\n",
+       "  2 modalities\n",
+       "    intra:\t4205 x 11\n",
+       "      obs:\t&#x27;cell_type&#x27;\n",
+       "      obsm:\t&#x27;spatial&#x27;\n",
+       "    para:\t4205 x 11\n",
+       "      obsm:\t&#x27;spatial&#x27;\n",
+       "      obsp:\t&#x27;spatial_connectivities&#x27;</pre>"
+      ],
+      "text/plain": [
+       "MuData object with n_obs × n_vars = 4205 × 22\n",
+       "  obs:\t'cell_type'\n",
+       "  uns:\t'importances', 'target_metrics'\n",
+       "  2 modalities\n",
+       "    intra:\t4205 x 11\n",
+       "      obs:\t'cell_type'\n",
+       "      obsm:\t'spatial'\n",
+       "    para:\t4205 x 11\n",
+       "      obsm:\t'spatial'\n",
+       "      obsp:\t'spatial_connectivities'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mu.read_h5mu(\"misty.h5mu\")"
    ]
   },
   {
