add complex filtering to dotplot, re-run tutorials

--- a/docs/source/notebooks/basic_usage.ipynb
+++ b/docs/source/notebooks/basic_usage.ipynb
@@ -602,7 +602,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:03<00:00, 310.04it/s]\n"
+      "100%|██████████| 1000/1000 [00:03<00:00, 297.42it/s]\n"
      ]
     }
    ],
@@ -665,105 +665,105 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>482</th>\n",
        "      <td>HLA-DRA</td>\n",
        "      <td>HLA-DRA</td>\n",
-       "      <td>0.625279</td>\n",
-       "      <td>0.323529</td>\n",
+       "      <td>4.537684</td>\n",
+       "      <td>0.995833</td>\n",
        "      <td>CD4</td>\n",
        "      <td>CD4</td>\n",
-       "      <td>0.295691</td>\n",
-       "      <td>0.220588</td>\n",
-       "      <td>CD4+/CD25 T Reg</td>\n",
-       "      <td>CD4+/CD25 T Reg</td>\n",
-       "      <td>0.460485</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.612842</td>\n",
+       "      <td>0.421053</td>\n",
+       "      <td>Dendritic</td>\n",
+       "      <td>CD4+/CD45RO+ Memory</td>\n",
+       "      <td>2.575263</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>HLA-DQA2</td>\n",
-       "      <td>HLA-DQA2</td>\n",
-       "      <td>0.196956</td>\n",
-       "      <td>0.117647</td>\n",
+       "      <th>321</th>\n",
+       "      <td>HLA-DRA</td>\n",
+       "      <td>HLA-DRA</td>\n",
+       "      <td>4.537684</td>\n",
+       "      <td>0.995833</td>\n",
        "      <td>CD4</td>\n",
        "      <td>CD4</td>\n",
-       "      <td>0.295691</td>\n",
-       "      <td>0.220588</td>\n",
-       "      <td>CD4+/CD25 T Reg</td>\n",
-       "      <td>CD4+/CD25 T Reg</td>\n",
-       "      <td>0.246324</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.596125</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>Dendritic</td>\n",
+       "      <td>CD4+/CD45RA+/CD25- Naive T</td>\n",
+       "      <td>2.566905</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>HLA-DQA1</td>\n",
-       "      <td>HLA-DQA1</td>\n",
-       "      <td>0.253897</td>\n",
-       "      <td>0.161765</td>\n",
+       "      <th>989</th>\n",
+       "      <td>HLA-DRA</td>\n",
+       "      <td>HLA-DRA</td>\n",
+       "      <td>4.537684</td>\n",
+       "      <td>0.995833</td>\n",
        "      <td>CD4</td>\n",
        "      <td>CD4</td>\n",
-       "      <td>0.295691</td>\n",
-       "      <td>0.220588</td>\n",
-       "      <td>CD4+/CD25 T Reg</td>\n",
-       "      <td>CD4+/CD25 T Reg</td>\n",
-       "      <td>0.274794</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.483977</td>\n",
+       "      <td>0.302326</td>\n",
+       "      <td>Dendritic</td>\n",
+       "      <td>CD14+ Monocyte</td>\n",
+       "      <td>2.510830</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>HLA-DRB1</td>\n",
-       "      <td>HLA-DRB1</td>\n",
-       "      <td>0.853603</td>\n",
-       "      <td>0.382353</td>\n",
-       "      <td>CD4</td>\n",
-       "      <td>CD4</td>\n",
-       "      <td>0.295691</td>\n",
-       "      <td>0.220588</td>\n",
-       "      <td>CD4+/CD25 T Reg</td>\n",
-       "      <td>CD4+/CD25 T Reg</td>\n",
-       "      <td>0.574647</td>\n",
-       "      <td>1.0</td>\n",
+       "      <th>651</th>\n",
+       "      <td>HLA-DRA</td>\n",
+       "      <td>HLA-DRA</td>\n",
+       "      <td>4.537684</td>\n",
+       "      <td>0.995833</td>\n",
+       "      <td>LAG3</td>\n",
+       "      <td>LAG3</td>\n",
+       "      <td>0.399500</td>\n",
+       "      <td>0.240741</td>\n",
+       "      <td>Dendritic</td>\n",
+       "      <td>CD8+ Cytotoxic T</td>\n",
+       "      <td>2.468592</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>HLA-DQB1</td>\n",
-       "      <td>HLA-DQB1</td>\n",
-       "      <td>0.401779</td>\n",
-       "      <td>0.279412</td>\n",
+       "      <th>1392</th>\n",
+       "      <td>HLA-DRA</td>\n",
+       "      <td>HLA-DRA</td>\n",
+       "      <td>4.537684</td>\n",
+       "      <td>0.995833</td>\n",
        "      <td>CD4</td>\n",
        "      <td>CD4</td>\n",
-       "      <td>0.295691</td>\n",
-       "      <td>0.220588</td>\n",
-       "      <td>CD4+/CD25 T Reg</td>\n",
-       "      <td>CD4+/CD25 T Reg</td>\n",
-       "      <td>0.348735</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.373671</td>\n",
+       "      <td>0.270833</td>\n",
+       "      <td>Dendritic</td>\n",
+       "      <td>Dendritic</td>\n",
+       "      <td>2.455678</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     ligand ligand_complex  ligand_means  ligand_props receptor   \n",
-       "0   HLA-DRA        HLA-DRA      0.625279      0.323529      CD4  \\\n",
-       "1  HLA-DQA2       HLA-DQA2      0.196956      0.117647      CD4   \n",
-       "2  HLA-DQA1       HLA-DQA1      0.253897      0.161765      CD4   \n",
-       "3  HLA-DRB1       HLA-DRB1      0.853603      0.382353      CD4   \n",
-       "4  HLA-DQB1       HLA-DQB1      0.401779      0.279412      CD4   \n",
+       "       ligand ligand_complex  ligand_means  ligand_props receptor   \n",
+       "482   HLA-DRA        HLA-DRA      4.537684      0.995833      CD4  \\\n",
+       "321   HLA-DRA        HLA-DRA      4.537684      0.995833      CD4   \n",
+       "989   HLA-DRA        HLA-DRA      4.537684      0.995833      CD4   \n",
+       "651   HLA-DRA        HLA-DRA      4.537684      0.995833     LAG3   \n",
+       "1392  HLA-DRA        HLA-DRA      4.537684      0.995833      CD4   \n",
        "\n",
-       "  receptor_complex  receptor_means  receptor_props           source   \n",
-       "0              CD4        0.295691        0.220588  CD4+/CD25 T Reg  \\\n",
-       "1              CD4        0.295691        0.220588  CD4+/CD25 T Reg   \n",
-       "2              CD4        0.295691        0.220588  CD4+/CD25 T Reg   \n",
-       "3              CD4        0.295691        0.220588  CD4+/CD25 T Reg   \n",
-       "4              CD4        0.295691        0.220588  CD4+/CD25 T Reg   \n",
+       "     receptor_complex  receptor_means  receptor_props     source   \n",
+       "482               CD4        0.612842        0.421053  Dendritic  \\\n",
+       "321               CD4        0.596125        0.500000  Dendritic   \n",
+       "989               CD4        0.483977        0.302326  Dendritic   \n",
+       "651              LAG3        0.399500        0.240741  Dendritic   \n",
+       "1392              CD4        0.373671        0.270833  Dendritic   \n",
        "\n",
-       "            target  lr_means  cellphone_pvals  \n",
-       "0  CD4+/CD25 T Reg  0.460485              1.0  \n",
-       "1  CD4+/CD25 T Reg  0.246324              1.0  \n",
-       "2  CD4+/CD25 T Reg  0.274794              1.0  \n",
-       "3  CD4+/CD25 T Reg  0.574647              1.0  \n",
-       "4  CD4+/CD25 T Reg  0.348735              1.0  "
+       "                          target  lr_means  cellphone_pvals  \n",
+       "482          CD4+/CD45RO+ Memory  2.575263              0.0  \n",
+       "321   CD4+/CD45RA+/CD25- Naive T  2.566905              0.0  \n",
+       "989               CD14+ Monocyte  2.510830              0.0  \n",
+       "651             CD8+ Cytotoxic T  2.468592              0.0  \n",
+       "1392                   Dendritic  2.455678              0.0  "
       ]
      },
      "execution_count": 12,
@@ -852,7 +852,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8767081645978)>"
+       "<ggplot: (8766632340426)>"
       ]
      },
      "execution_count": 13,
@@ -920,7 +920,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:03<00:00, 325.25it/s]\n"
+      "100%|██████████| 1000/1000 [00:02<00:00, 336.32it/s]\n"
      ]
     },
     {
@@ -938,7 +938,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:02<00:00, 348.35it/s]\n"
+      "100%|██████████| 1000/1000 [00:03<00:00, 324.97it/s]\n"
      ]
     }
    ],
@@ -1189,7 +1189,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8767081696758)>"
+       "<ggplot: (8766632310028)>"
       ]
      },
      "execution_count": 17,
@@ -1242,7 +1242,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8767083349554)>"
+       "<ggplot: (8766632499423)>"
       ]
      },
      "execution_count": 18,
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "e637c519",
    "metadata": {},
    "outputs": [
@@ -1302,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "d2a883ed-1324-4b8f-a1e8-b7fbbcb26621",
    "metadata": {},
    "outputs": [],
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "e0267dda-e858-42f4-a6a9-79594ad89a68",
    "metadata": {},
    "outputs": [
@@ -1330,10 +1330,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8767081571310)>"
+       "<ggplot: (8766627346658)>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "bc629550",
    "metadata": {},
    "outputs": [],
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "eddb810f",
    "metadata": {},
    "outputs": [
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "6e685209",
    "metadata": {},
    "outputs": [
@@ -1539,7 +1539,7 @@
        "898   1.860121   1.861258        0.003882  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
