decoupleR>=1.4.0 required for mofacell

--- a/docs/source/notebooks/mofacellular.ipynb
+++ b/docs/source/notebooks/mofacellular.ipynb
@@ -42,7 +42,7 @@
     "Install mofa, decoupler, and omnipath via pip with the following commands:\n",
     "\n",
     "```python\n",
-    "pip install decoupler\n",
+    "pip install \"decoupler>=0.1.4\"\n",
     "pip install mofax\n",
     "pip install muon\n",
     "pip install omnipath\n",
